test/DebuggerCommon/bug_543550.js.dbg.baseline
[
  {
    "evaluate": {
      "m": {
        "#__proto__": {
          "constructor": "function function Object() { [native code] }",
          "hasOwnProperty": "function function hasOwnProperty() { [native code] }",
          "propertyIsEnumerable": "function function propertyIsEnumerable() { [native code] }",
          "isPrototypeOf": "function function isPrototypeOf() { [native code] }",
          "toLocaleString": "function function toLocaleString() { [native code] }",
          "toString": "function function toString() { [native code] }",
          "valueOf": "function function valueOf() { [native code] }",
          "#__proto__": "object null",
          "__defineGetter__": "function function __defineGetter__() { [native code] }",
          "__defineSetter__": "function function __defineSetter__() { [native code] }",
          "__lookupGetter__": "function function __lookupGetter__() { [native code] }",
          "__lookupSetter__": "function function __lookupSetter__() { [native code] }"
        },
        "constructor": {
          "#__proto__": "function function() {\n    [native code]\n}",
          "length": "number 0",
          "prototype": "Object {...}",
          "Symbol.species": "function function Map() { [native code] }",
          "name": "string Map"
        },
        "clear": {
          "#__proto__": "function function() {\n    [native code]\n}",
          "length": "number 0",
          "name": "string clear"
        },
        "delete": {
          "#__proto__": "function function() {\n    [native code]\n}",
          "length": "number 1",
          "name": "string delete"
        },
        "forEach": {
          "#__proto__": "function function() {\n    [native code]\n}",
          "length": "number 1",
          "name": "string forEach"
        },
        "get": {
          "#__proto__": "function function() {\n    [native code]\n}",
          "length": "number 1",
          "name": "string get"
        },
        "has": {
          "#__proto__": "function function() {\n    [native code]\n}",
          "length": "number 1",
          "name": "string has"
        },
        "set": {
          "#__proto__": "function function() {\n    [native code]\n}",
          "length": "number 2",
          "name": "string set"
        },
        "size": {
          "#__proto__": "Object {...}",
          "message": "string Map.prototype.size: 'this' is not a Map object",
          "description": "string Map.prototype.size: 'this' is not a Map object",
          "number": "number -2146823172",
          "stack": "string TypeError: Map.prototype.size: 'this' is not a Map object\n\tat Global code (bug_543550.js:8:1)"
        },
        "entries": {
          "#__proto__": "function function() {\n    [native code]\n}",
          "length": "number 0",
          "name": "string entries"
        },
        "keys": {
          "#__proto__": "function function() {\n    [native code]\n}",
          "length": "number 0",
          "name": "string keys"
        },
        "values": {
          "#__proto__": "function function() {\n    [native code]\n}",
          "length": "number 0",
          "name": "string values"
        },
        "Symbol.iterator": {
          "#__proto__": "function function() {\n    [native code]\n}",
          "length": "number 0",
          "name": "string entries"
        },
        "Symbol.toStringTag": "string Map"
      }
    }
  },
  {
    "evaluate": {
      "bar": {
        "#__proto__": {
          "#__proto__": "Object {...}",
          "constructor": "function function Function() { [native code] }",
          "length": "number 0",
          "name": "string ",
          "apply": "function function apply() { [native code] }",
          "bind": "function function bind() { [native code] }",
          "call": "function function call() { [native code] }",
          "toString": "function function toString() { [native code] }",
          "Symbol.hasInstance": "function function [Symbol.hasInstance]() { [native code] }",
          "caller": "Error 'arguments', 'callee' and 'caller' are restricted function properties and cannot be accessed in this context",
          "arguments": "Error 'arguments', 'callee' and 'caller' are restricted function properties and cannot be accessed in this context"
        },
        "prototype": {
          "#__proto__": "Object {...}",
          "constructor": "function function bar() {\r\n\t}"
        },
        "length": "number 0",
        "name": "string bar"
      }
    }
  }
]